force-app/main/default/objects/ZipToDealer__c/ZipToDealer__c.object-meta.xml
<CustomObject>
    <label>Zip To Dealer</label>
    <pluralLabel>Zip To Dealers</pluralLabel>
    <nameField>
        <label>Zip To Dealer Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>