force-app/main/default/objects/ZipToDealer__c/fields/Dealer__c.field-meta.xml
<CustomField>
    <fullName>Dealer__c</fullName>
    <label>Dealer</label>
    <type>Lookup</type>
    <referenceTo>Account</referenceTo>
    <relationshipName>ZipToDealers</relationshipName>
    <relationshipLabel>Zip To Dealers</relationshipLabel>
</CustomField>