force-app/main/default/objects/ZipToDealer__c/fields/DistanceKm__c.field-meta.xml
<CustomField>
    <fullName>DistanceKm__c</fullName>
    <label>Distance (km)</label>
    <type>Number</type>
    <precision>10</precision>
    <scale>2</scale>
</CustomField>