force-app/main/default/objects/ZipToDealer__c/fields/VehicleModel__c.field-meta.xml
<CustomField>
    <fullName>VehicleModel__c</fullName>
    <label>Vehicle Model</label>
    <type>Text</type>
    <length>100</length>
</CustomField>