force-app/main/default/objects/ZipToDealer__c/fields/Zip__c.field-meta.xml
<CustomField>
    <fullName>Zip__c</fullName>
    <label>ZIP Code</label>
    <type>Text</type>
    <length>10</length>
</CustomField>